runFormatTest(import.meta, ["yaml"], { insertPragma: true });
